fix: center edit page icon on mobile devices

--- a/src/theme/Icon/Edit/styles.module.css
+++ b/src/theme/Icon/Edit/styles.module.css
@@ -13,3 +13,9 @@ a:has(.icon-edit) {
 .icon-edit path {
   fill: var(--ifm-color-primary);
 }
+
+@media screen and (max-width: 996px) {
+  a:has(.icon-edit) {
+    place-content: center;
+  }
+}
